# Lichtfeld-ml-sharp-Plugin

./: .gitignore  INSTALL.md  README.md  __init__.py  plugin.py  pyproject.toml  sharp_processor.py
ml-sharp/: pyproject.toml
panels/: rml_keys.py  scrub_field.py  sharp_video.py  sharp_video.rcss  sharp_video.rml
