[project]
name = "sharp_4d"
version = "0.2.1"
description = "4D Gaussian Splatting from Video using SHARP"

requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch>=2.2",
    "torchvision>=0.23.0",
    "timm",
    "gsplat",
    "imageio",
    "imageio-ffmpeg",
    "pillow-heif",
    "plyfile",
    "scipy",
    "tqdm",
    "click",
    "sharp",
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
min_lichtfeld_version = "0.0.5"

[tool.uv.sources]
sharp = { path = "ml-sharp" }
