[project]
name = "sharp_4d"
version = "0.3.1"
description = "4D Gaussian Splatting from Video using SHARP"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch==2.7.1+cu128",
    "torchvision==0.22.1+cu128",
    "timm",
    "gsplat",
    "imageio",
    "imageio-ffmpeg",
    "pillow-heif",
    "plyfile",
    "scipy",
    "tqdm",
    "click",
    "sharp",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
sharp = { path = "ml-sharp" }
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[tool.lichtfeld]
hot_reload = true
entry_point = "plugin"
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []
